# sentry-wrapper

./: .gitignore  CHANGES.rst  Makefile  README.rst  docker-compose.yml  pyproject.toml  setup.py
python_project/: README.md  setup.py
python_project/whatever/: __init__.py
sentry_msg/: __init__.py
sentry_wrapper/: __init__.py
