[tool.poetry]
name = "sentry-wrapper"
version = "3.0.1"
description = "Forward exceptions raised by a setuptools entrypoint to sentry"
authors = ["Julien Castets <castets.j@gmail.com>"]
license = "WTFPL"
readme = "README.rst"
repository = "https://github.com/scaleway/sentry-wrapper"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: System :: Distributed Computing",
]
packages = [
    { include = "sentry_wrapper" },
    { include = "sentry_msg" },
]
include = ["CHANGES.rst"]

[tool.poetry.scripts]
sentry-wrapper = "sentry_wrapper:execute"
sentry-msg = "sentry_msg:execute"

[tool.poetry.dependencies]
python = "^3.6"
sentry-sdk = "^2.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
